[package]
name = "ztarcc-rs"
version = "0.1.0"
edition = "2021"
description = "Convert between Chinese scripts"
repository = "https://github.com/mook/ztarcc-rs"
license = "AGPL-3.0-or-later"
categories = ["text-processing"]
include = ["*.rs", "/opencc/data/dictionary", "/opencc/test/testcases"]

[dependencies]
anyhow = "1.0.84"
charset-normalizer-rs = { version = "1.0.6", optional = true }
clap = { version = "4.5.4", features = ["derive"], optional = true }
encoding_rs = { version = "0.8.34", optional = true }
enum-map = "2.7.3"
jieba-rs = "0.7.0"
miniz_oxide = { version = "0.7.3", features = ["std"] }
once_cell = "1.19.0"
postcard = { version = "1.0.8", features = ["use-std"], default-features = false }
rayon = { version = "1.10.0", optional = true }
trie-rs = { version = "0.4.2", features = ["serde"] }
wasm-bindgen = { version = "0.2.92", optional = true }

[build-dependencies]
anyhow = "1.0.84"
miniz_oxide = { version = "0.7.3", features = ["std"] }
postcard = { version = "1.0.8", features = ["use-std"], default-features = false }
trie-rs = { version = "0.4.2", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[features]
cli = [
    "dep:charset-normalizer-rs",
    "dep:clap",
    "dep:encoding_rs",
    "dep:rayon",
]
wasm = ["dep:wasm-bindgen"]

[[bin]]
name = "ztarcc"
required-features = ["cli"]

[profile.release]
lto = true
opt-level = "s"
